<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Events.NewEventActivity">


    <TextView
        android:id="@+id/NewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="New Event"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/spacer_bar"
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/NewEvent"/>

    <TextView
        android:id="@+id/new_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="25sp"
        android:text="Event Title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer_bar" />

    <EditText
        android:id="@+id/new_event_title_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="Event Title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_title"
        app:layout_constraintTop_toBottomOf="@id/new_event_title" />

    <TextView
        android:id="@+id/new_event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="Start Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_title"
        app:layout_constraintTop_toBottomOf="@id/new_event_title_e" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_event_start_button"
        android:layout_width="45dp"
        android:layout_height="0sp"
        android:layout_marginStart="10sp"
        android:padding="0sp"
        android:text="Edit"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/new_event_start_time"
        app:layout_constraintStart_toEndOf="@id/new_event_start_time"
        app:layout_constraintTop_toTopOf="@id/new_event_start_time" />

    <TextView
        android:id="@+id/new_event_start_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="Start Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_start_time"
        app:layout_constraintTop_toBottomOf="@id/new_event_start_time" />

    <TextView
        android:id="@+id/new_event_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="End Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_start_time"
        app:layout_constraintTop_toBottomOf="@id/new_event_start_time_e" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_event_end_button"
        android:layout_width="45dp"
        android:layout_height="0sp"
        android:layout_marginStart="10sp"
        android:padding="0sp"
        android:text="Edit"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/new_event_end_time"
        app:layout_constraintStart_toEndOf="@id/new_event_end_time"
        app:layout_constraintTop_toTopOf="@id/new_event_end_time" />

    <TextView
        android:id="@+id/new_event_end_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="End Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_end_time"
        app:layout_constraintTop_toBottomOf="@+id/new_event_end_time" />

    <TextView
        android:id="@+id/new_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="Description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_end_time"
        app:layout_constraintTop_toBottomOf="@+id/new_event_end_time_e" />

    <EditText
        android:id="@+id/new_event_description_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="Description"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_description"
        app:layout_constraintTop_toBottomOf="@id/new_event_description" />

    <TextView
        android:id="@+id/new_event_attendee_limit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="Signed Up Attendee Limit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_end_time"
        app:layout_constraintTop_toBottomOf="@+id/new_event_description_e" />

    <EditText
        android:id="@+id/new_event_attendee_limit_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="0"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_attendee_limit_label"
        app:layout_constraintTop_toBottomOf="@id/new_event_attendee_limit_label" />


    <Button
        android:id="@+id/btnCreateNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="Create"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_event_attendee_limit_e"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>