...
            android:layout_marginEnd="20sp"
            android:text="Send Announcement"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/event_details_organizer_event_stats" />

        <Button
            android:id="@+id/btnViewAnnouncements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Announcements"
            app:layout_constraintTop_toBottomOf="@id/btnSendNotification" />
    </LinearLayout>

...
            android:layout_marginBottom="8sp"
            android:visibility="gone"
            android:text="View Signed Up" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUpEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="?attr/colorAccent"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
...
